# openinterpreter

.github/workflows/: bazel.yml  blob-size-policy.yml  ci.yml  public-ci.yml  rust-ci-full.yml  rust-ci.yml  rust-release.yml  rusty-v8-release.yml  sdk.yml
codex-rs/: Cargo.toml
codex-rs/analytics/src/: analytics_client_tests.rs
codex-rs/app-server/: BUILD.bazel  Cargo.toml  README.md
codex-rs/app-server-client/: Cargo.toml
codex-rs/app-server-client/src/: lib.rs
codex-rs/app-server-launcher/: Cargo.toml
codex-rs/app-server-launcher/src/: lib.rs
codex-rs/app-server/src/: cli_startup.rs  codex_message_processor.rs  lib.rs  main.rs  message_processor.rs  models.rs
codex-rs/arg0/src/: lib.rs
codex-rs/chat-wire-compat/src/: client.rs  proxy.rs  request.rs  stream.rs
codex-rs/chatgpt/src/: connectors.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs
codex-rs/codex-api/: model_compatibility_catalog.json
codex-rs/codex-api/src/: auth.rs  lib.rs  model_compatibility_catalog.rs
codex-rs/config/src/: config_toml.rs  profile_toml.rs  types.rs
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/core-skills/src/: lib.rs  loader.rs
codex-rs/core/src/: client.rs  client_common.rs  client_tests.rs  lib.rs  (+9 more)
codex-rs/exec/: Cargo.toml
codex-rs/model-provider-info/: provider_catalog.json
codex-rs/models-manager/: Cargo.toml
codex-rs/root-tui/: Cargo.toml
codex-rs/server-cli/: Cargo.toml
codex-rs/tui/: Cargo.toml
docs/: cli-reference.md  daemon.md  sessions.md
scripts/: build-interpreter-release.sh
scripts/install/: install.sh
(+167 files in other folders)
