[package]
name = "codex-app-server-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_app_server_launcher"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-utils-pty = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true, features = ["time"] }
uuid = { workspace = true, features = ["v4"] }
which = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
